--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "node ./builder.js && babel path-parse-raw.js --out-file index.js && npm t",
-    "test": "tape test.js"
+    "test": "tape test/runner.js"
   },
   "keywords": [
     "path",
