--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-plugin-transform-es5-property-mutators": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "babylon": "^6.18.0",
     "deep-equal": "^1.0.1",
     "tape": "^4.9.0"
   },
