--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ notifications:
 matrix:
   include:
     - node_js: "9.11.1"
-      script: npm run build
+      script: npm run buildtest
     - node_js: "4"
       script: npm run simpletest
     - node_js: "4.0.0"
