--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ matrix:
   include:
     - node_js: "9.11.1"
       script: npm run buildtest
+    - node_js: "stable"
+      script: npm install browserify && npm run browserify-test
     - node_js: "4"
       script: npm run simpletest
     - node_js: "4.0.0"
