--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babylon": "^6.18.0",
     "deep-equal": "^1.0.1",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.10.0",
-    "eslint": "^4.19.1",
+    "recast": "^0.14.7",
     "tape": "^4.9.0"
   },
   "files": [
